crates/id_effect/tests/ui/req_macro.rs
fn main() {
  id_effect::req!(Db: String);
}
